--- a/src/app/component/product-view/single-product-view.component.scss
+++ b/src/app/component/product-view/single-product-view.component.scss
@@ -1,10 +1,31 @@
 .mainStage {
+  display: flex;
+
+  &__productDescription {
+    display: -webkit-box;
+    line-clamp: 12;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 12;
+  }
+
   &__productInformation {
+    max-width: 30em;
+    padding: 3em;
     text-align: left;
+
+    @media screen and (min-width: 768px) {
+      padding: unset;
+    }
   }
 
   &__mainImage {
-    max-height: 30em;
+    max-height: 20em;
+
+    @media screen and (min-width: 1400px) {
+      max-height: 30em;
+    }
   }
 }
 
