--- a/src/app/component/landing-pages/category-teaser.component.scss
+++ b/src/app/component/landing-pages/category-teaser.component.scss
@@ -52,6 +52,11 @@
     width: 20em;
   }
 
+  a {
+    color: #FFF;
+    text-decoration: none;
+  }
+
   &__contentContainer {
     margin-top: 2em;
   }
