--- a/src/app/component/product-view/single-product-view.component.scss
+++ b/src/app/component/product-view/single-product-view.component.scss
@@ -7,6 +7,7 @@
     display: -webkit-box;
     line-clamp: 8;
     overflow: hidden;
+    padding-top: 1em;
     text-overflow: ellipsis;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 8;
