- added back to category button - search bar is now only visible on home and overview page - search is now applied on home category teasers

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -41,7 +41,7 @@
       </div>
     </div>
   </div>
-  <div class="secondSearchbar">
+  <div *ngIf="showSearchBar" class="secondSearchbar">
     <div class="col-12 secondSearchbar__content">
       <input
         #secondBarSearchPattern
