--- a/src/app/component/product-view/single-product-view.component.html
+++ b/src/app/component/product-view/single-product-view.component.html
@@ -1,4 +1,14 @@
 <div class="container singleProductView__content">
+
+  <div class="row">
+    <div class="col-12 content--center">
+      <div *ngIf="navigationItemToCategory?.toId" class="button singleProductView__backToOverview">
+        <a href="/{{(navigationItemToCategory?.pathParts || [''])[0]}}" target="_self">
+          {{ 'BACK_TO' | translate }} "{{ 'NAVIGATION_' + navigationItemToCategory?.toId | translate }}"
+        </a>
+      </div>
+    </div>
+  </div>
   <div class="row">
     <div class="col-12 col-md-6">
       <div>
@@ -18,11 +28,11 @@
           </div>
 
           <div class="productInformation__offers">
-            <a href="{{itemWithLowestPrice?.link}}" target="_blank">
-              <div class="productInformation__offer">
-                {{getShopNameFromUrl(itemWithLowestPrice?.link)}}<span *ngIf="itemWithLowestPrice?.renderPrice()">: {{itemWithLowestPrice?.renderPrice()}}</span>
-              </div>
-            </a>
+            <div class="button">
+              <a href="{{itemWithLowestPrice?.link}}" target="_blank">
+                  {{getShopNameFromUrl(itemWithLowestPrice?.link)}}<span *ngIf="itemWithLowestPrice?.renderPrice()">: {{itemWithLowestPrice?.renderPrice()}}</span>
+              </a>
+            </div>
           </div>
 
           <div *ngIf="areThereMorePrices">
@@ -30,16 +40,16 @@
               <h5>{{ 'MORE_OFFERS' | translate }}</h5>
             </div>
             <div class="productInformation__offers">
-              <a *ngFor="let offer of moreExpensiveOfferItems" href="{{offer?.link}}" target="_blank">
-                <div class="productInformation__offer">
-                  {{getShopNameFromUrl(offer?.link)}}<span *ngIf="offer?.renderPrice()">: {{offer?.renderPrice()}}</span>
-                </div>
-              </a>
-              <a *ngFor="let offer of offerItemsWithoutPrice" href="{{offer?.link}}" target="_blank">
-                <div class="productInformation__offer">
-                  {{getShopNameFromUrl(offer?.link)}}<span *ngIf="offer?.renderPrice()">: {{offer?.renderPrice()}}</span>
-                </div>
-              </a>
+              <div *ngFor="let offer of moreExpensiveOfferItems" class="button">
+                <a href="{{offer?.link}}" target="_blank">
+                    {{getShopNameFromUrl(offer?.link)}}<span *ngIf="offer?.renderPrice()">: {{offer?.renderPrice()}}</span>
+                </a>
+              </div>
+              <div *ngFor="let offer of offerItemsWithoutPrice" class="button">
+                <a href="{{offer?.link}}" target="_blank">
+                    {{getShopNameFromUrl(offer?.link)}}<span *ngIf="offer?.renderPrice()">: {{offer?.renderPrice()}}</span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
