--- a/src/app/component/product-view/single-product-view.component.html
+++ b/src/app/component/product-view/single-product-view.component.html
@@ -56,10 +56,19 @@
       </div>
     </div>
   </div>
-
+  <div class="row productInformation__share">
+    <div class="col-12">
+      <div class="productInformation">
+        <h5>{{'SHARE' | translate}}</h5>
+        <div class="button">
+          <a href="whatsapp://send?text={{'SHARE_FOUND_AT_WE_WANNA' | translate}} - {{currentUriEncodedUri}}">{{'SHARE_ON_WHATSAPP' | translate}}</a>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="row">
     <div class="col-12">
-      <div class="productInformation productInformation__header">
+      <div class="productInformation productInformation--last productInformation__header">
         &nbsp;
       </div>
     </div>
