--- a/src/app/component/product-view/single-product-view.component.scss
+++ b/src/app/component/product-view/single-product-view.component.scss
@@ -8,13 +8,13 @@
   padding: 0.5em 1em 0.5em 1em;
   text-align: center;
 
-  a {
+  &__wrapper {
     color: $content-color;
     text-decoration: none;
-  }
 
-  a:hover {
-    color: $content-color--active;
+    &:hover {
+      color: $content-color--active;
+    }
   }
 }
 
