--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -33,6 +33,7 @@
   }
 
   &__imageContainer {
+    background-color: #FFF;
     border-radius: 0.5em;
     display: flex;
     justify-content: center;
