--- a/src/app/component/landing-pages/category-teaser.component.scss
+++ b/src/app/component/landing-pages/category-teaser.component.scss
@@ -72,10 +72,10 @@
   }
 
   &__imageContainer {
+    align-items: center;
     background-color: #FFF;
     border-radius: 0.5em;
     display: flex;
-    justify-content: center;
     min-height: 14em;
     position: relative;
     width: 10em;
