--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -33,10 +33,10 @@
   }
 
   &__imageContainer {
+    align-items: center;
     background-color: #FFF;
     border-radius: 0.5em;
     display: flex;
-    justify-content: center;
     min-height: 14em;
     position: relative;
     width: 10em;
