--- a/src/app/component/landing-pages/category-teaser.component.scss
+++ b/src/app/component/landing-pages/category-teaser.component.scss
@@ -77,6 +77,7 @@
     border-radius: 0.5em;
     display: flex;
     min-height: 14em;
+    padding: 0.5em;
     position: relative;
     width: 10em;
 
