--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -38,6 +38,7 @@
     border-radius: 0.5em;
     display: flex;
     min-height: 14em;
+    padding: 0.5em;
     position: relative;
     width: 10em;
 
