--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -37,6 +37,7 @@
     background-color: #FFF;
     border-radius: 0.5em;
     display: flex;
+    justify-content: center;
     min-height: 14em;
     padding: 0.5em;
     position: relative;
