--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <div class="app">
   <header></header>
   <div class="app-content">
+    <dialog #gdprDialog class="gdpr__dialog" (click)="gdprDialog.close()">
+      <general-data-protection-regulation [gdprDialog]="gdprDialog"></general-data-protection-regulation>
+    </dialog>
+    <input #gdpr (click)="gdprDialog.showModal();" style="display: none;" />
+
     <router-outlet></router-outlet>
   </div>
   <footer></footer>
