--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,4 @@
+@import 'src/app/variables';
 
 .app {
   font-family: 'Source Sans Pro', sans-serif;
@@ -15,4 +16,8 @@
   &h1 {
     font-size: 2.0em;
   }
+}
+
+.gdpr__dialog {
+  background-color: $container-background-color;
 }
