--- a/src/app/component/legal/general-data-protection-regulation.component.html
+++ b/src/app/component/legal/general-data-protection-regulation.component.html
@@ -4,9 +4,9 @@
       <h4>Privatsph&auml;reeinstellungen</h4>
 
       <div class="gdpr__explanation">
-        Wir nutzen Cookies, um unsere Webseiten für Sie optimal zu gestalten und fortlaufend zu verbessern.<br/>
-        Durch das Klicken des „Alle akzeptieren“-Buttons stimmen Sie dieser Verarbeitung Ihrer persönlichen Daten für diese Verarbeitungszwecke zu.<br/>
-        Sollten Sie damit nicht einverstanden sein, so können Sie Ihre bevorzugten Einstellungen vornehmen, bevor Sie zustimmen oder ablehnen.<br/>
+        Wir nutzen Cookies, um unsere Webseiten für Sie optimal zu gestalten und fortlaufend zu verbessern.
+        Durch das Klicken des „Alle akzeptieren“-Buttons stimmen Sie dieser Verarbeitung Ihrer persönlichen Daten für diese Verarbeitungszwecke zu.
+        Sollten Sie damit nicht einverstanden sein, so können Sie Ihre bevorzugten Einstellungen vornehmen, bevor Sie zustimmen oder ablehnen.
         Weitere Details können Sie unserer Datenschutzerklärung entnehmen.
       </div>
 
