- added data protection legal page

--- a/src/app/component/legal/general-data-protection-regulation.component.html
+++ b/src/app/component/legal/general-data-protection-regulation.component.html
@@ -7,7 +7,7 @@
         Wir nutzen Cookies, um unsere Webseiten für Sie optimal zu gestalten und fortlaufend zu verbessern.
         Durch das Klicken des „Alle akzeptieren“-Buttons stimmen Sie dieser Verarbeitung Ihrer persönlichen Daten für diese Verarbeitungszwecke zu.
         Sollten Sie damit nicht einverstanden sein, so können Sie Ihre bevorzugten Einstellungen vornehmen, bevor Sie zustimmen oder ablehnen.
-        Weitere Details können Sie unserer Datenschutzerklärung entnehmen.
+        Weitere Details können Sie unserer <a [routerLink]="['/data-protection']" target="dataProtection">Datenschutzerklärung</a> entnehmen.
       </div>
 
       <div class="gdpr__actions">
