--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -2,8 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="footer__links">
+        <a [routerLink]="['/imprint']" class="footer__link footer__link{{isImprintActive ? '--active' : ''}}">Impressum</a>
         <a (click)="showGdprDialog()" class="footer__link">Privatsphäre Einstellungen</a>
-        <a [routerLink]="['/imprint']" class="footer__link{{isImprintActive ? '--active' : ''}}">Impressum</a>
+        <a [routerLink]="['/data-protection']" class="footer__link footer__link{{isDataProtectionActive ? '--active' : ''}}">Datenschutzerklärung</a>
       </div>
     </div>
   </div>
