--- a/src/app/component/footer/footer.component.scss
+++ b/src/app/component/footer/footer.component.scss
@@ -26,7 +26,7 @@
 
   &__links {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
   }
 
   @media screen and (min-width: 576px) {
