--- a/src/app/component/legal/general-data-protection-regulation.component.scss
+++ b/src/app/component/legal/general-data-protection-regulation.component.scss
@@ -7,7 +7,7 @@
 
   &__actions {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
 
     button {
       justify-content: center;
