--- a/src/app/component/landing-pages/category-teaser.component.html
+++ b/src/app/component/landing-pages/category-teaser.component.html
@@ -4,10 +4,10 @@
   <span class="header__titleSlogan"> {{('NAVIGATION_SLOGAN_' + navigationItem?.toId) | translate}}!</span>
 </div>
 <div class="col-12 informationItems__container">
-  <div *ngFor="let item of getItemsOfCategory()">
+  <div *ngFor="let item of getItemsOfCategory(); let i = index;">
 
-    <div *ngIf="item" [ngClass]="['informationItem', item?.itemId ? '' : 'informationItem--loading']">
-      <div class="informationItem__imageContainer">
+    <div *ngIf="item" [ngClass]="['informationItem', item?.itemId ? '' : 'informationItem--loading', -1 !== [0, 1].indexOf(i) ? 'informationItem--displayUpToL informationItem--displayFromXXL' : '' ]">
+      <div [ngClass]="['informationItem__imageContainer', item?.itemId ? '' : 'informationItem__imageContainer--loading']">
         <a href="{{getSeoFriendlySingleProductViewUrl(item)}}">
           <img
             class="informationItem__image"
