--- a/src/app/component/landing-pages/category-teaser.component.scss
+++ b/src/app/component/landing-pages/category-teaser.component.scss
@@ -77,18 +77,17 @@
     border-radius: 0.5em;
     display: flex;
     justify-content: center;
-    min-height: 14em;
+    min-height: 15em;
     padding: 0.5em;
     position: relative;
     width: 10em;
 
     @media screen and (min-width: 576px) {
-      min-height: 15em;
       width: 9em;
     }
 
     @media screen and (min-width: 768px) {
-      min-height: 19em;
+      min-height: 21em;
       width: 12em;
     }
 
@@ -100,6 +99,10 @@
     &:hover {
       transform: scale(1.1);
       transition: transform 0.5s;
+    }
+
+    &--loading {
+      background: none;
     }
   }
 
@@ -122,6 +125,20 @@
     text-overflow: ellipsis;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 4;
+  }
+
+  &--displayFromXXL {
+    display: none;
+
+    @media screen and (min-width: 1400px) {
+      display: inherit;
+    }
+  }
+
+  &--displayUpToL {
+    @media screen and (max-width: 992px) {
+      display: inherit;
+    }
   }
 
   &--loading {
