--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -1,35 +1,42 @@
 @import 'src/app/variables';
 
 .informationItem {
-  background-color: rgba(7, 80, 97, .25);
-  border-radius: 0.5em;
   font-size: 0.85em;
-  padding: 2em;
+  padding: 1.5em 0.5em 1.5em 0.5em;
   margin: 0.5em;
   text-align: center;
   text-align: -webkit-center;
-  width: 20em;
-
-  a {
-    text-decoration: none;
-  }
+  width: 11em;
 
   @media screen and (min-width: 576px) {
     width: 15em;
   }
 
-  @media screen and (min-width: 1140px) {
-    width: 16em;
+  @media screen and (min-width: 768px) {
+    width: 20em;
+  }
+
+  @media screen and (min-width: 1400px) {
+    width: 20em;
+  }
+
+  a {
+    color: #FFF;
+    text-decoration: none;
   }
 
   &__contentContainer {
-    color: #fff;
     margin-top: 2em;
   }
 
   &__image {
+    border-radius: 0.5em;
     max-height: 14em;
     max-width: 100%;
+
+    @media screen and (min-width: 768px) {
+      max-height: 20em;
+    }
   }
 
   &__imageContainer {
@@ -38,7 +45,7 @@
     border-radius: 0.5em;
     display: flex;
     justify-content: center;
-    min-height: 14em;
+    min-height: 15em;
     padding: 0.5em;
     position: relative;
     width: 10em;
@@ -47,13 +54,23 @@
       width: 9em;
     }
 
-    @media screen and (min-width: 1140px) {
+    @media screen and (min-width: 768px) {
+      min-height: 21em;
       width: 12em;
+    }
+
+    @media screen and (min-width: 1400px) {
+      min-height: 21em;
+      width: 14em;
     }
 
     &:hover {
       transform: scale(1.1);
       transition: transform 0.5s;
+    }
+
+    &--loading {
+      background: none;
     }
   }
 
@@ -88,17 +105,20 @@
     background-size: 800px 104px;
     position: relative;
   }
+}
 
-  &s {
-    &__container {
-      display: inline-flex;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
+.informationItems {
+  &__container {
+    background-color: rgba(7, 80, 97, .25);
+    border-radius: 0.5em;
+    display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 1em;
+  }
 
-    &__content {
-      display: flex;
-      padding-top: 4.5em;
-    }
+  &__content {
+    display: flex;
+    padding-top: 4.5em;
   }
 }
