- adjusted gdpr dialog text - enhanced category link SEO support

--- a/src/app/component/landing-pages/category-teaser.component.html
+++ b/src/app/component/landing-pages/category-teaser.component.html
@@ -35,8 +35,7 @@
   </div>
 </div>
 <div class="category__actions">
-  <button
-    [routerLink]="[(navigationItem?.pathParts || [])[0]]">
-    {{'SHOW_MORE_PREFIX' | translate }} "{{ ('NAVIGATION_' + navigationItem?.toId) | translate }}" {{'SHOW_MORE_SUFFIX' | translate }}
-  </button>
+  <a href="{{[(navigationItem?.pathParts || [])[0]]}}" class="button">
+      {{'SHOW_MORE_PREFIX' | translate }} "{{ ('NAVIGATION_' + navigationItem?.toId) | translate }}" {{'SHOW_MORE_SUFFIX' | translate }}
+  </a>
 </div>
