--- a/src/styles/controls.scss
+++ b/src/styles/controls.scss
@@ -18,6 +18,25 @@ button:hover {
   transition: background-color 200ms linear;
 }
 
+.button {
+  align-items: center;
+  background-color: $container-background-color;
+  border: 1px solid #0dcaf0;
+  color: #0dcaf0;
+  display: flex;
+  transition: background-color 200ms linear;
+  outline: 0;
+  padding: 0.5em;
+  text-decoration: none;
+  
+  &:hover {
+    background-color: #0dcaf0;
+    border: 1px solid $container-background-color;
+    color: $container-background-color;
+    transition: background-color 200ms linear;
+  }
+}
+
 input {
     background-color: unset;
     border: 0;
