--- a/src/app/component/landing-pages/category-teaser.component.html
+++ b/src/app/component/landing-pages/category-teaser.component.html
@@ -1,7 +1,7 @@
-<div class="category__title">
+<div *ngIf="showHeader" class="category__title">
   <span class="header__titleCapitalLetter">W</span><span class="header__title">e</span>
   <span class="header__titleCapitalLetter">W</span><span class="header__title">anna</span>
-  <span class="header__titleSlogan"> {{('NAVIGATION_SLOGAN_' + navigationItem?.toId) | translate}}!</span>
+  <span class="header__titleSlogan"> {{('NAVIGATION_SLOGAN_' + (navigationItem?.hasSlogan ? navigationItem?.toId || 'ALL' : 'ALL')) | translate}}!</span>
 </div>
 <div class="col-12 informationItems__container">
   <div *ngFor="let item of getItemsOfCategory(); let i = index;">
@@ -35,7 +35,7 @@
   </div>
 </div>
 <div class="category__actions">
-  <a href="{{[(navigationItem?.pathParts || [])[0]]}}" class="button">
+  <a href="{{moreLink}}" class="button">
       {{'SHOW_MORE_PREFIX' | translate }} "{{ ('NAVIGATION_' + navigationItem?.toId) | translate }}" {{'SHOW_MORE_SUFFIX' | translate }}
   </a>
 </div>
