--- a/src/app/component/product-view/single-product-view.component.scss
+++ b/src/app/component/product-view/single-product-view.component.scss
@@ -5,6 +5,7 @@
   border-radius: 0.5em;
   cursor: pointer;
   max-width: 18em;
+  margin: 0.5em;
   padding: 0.5em 1em 0.5em 1em;
   text-align: center;
 
