--- a/src/app/component/product-view/single-product-view.component.html
+++ b/src/app/component/product-view/single-product-view.component.html
@@ -12,24 +12,12 @@
 
   <div class="row">
     <div class="col-12 col-md-6">
-      <div>
-        <section class="carousel" aria-label="Gallery">
-          <ol class="carousel__viewport">
-            <li
-              *ngFor="let imageBigUrl of (item?.imagesBig || []).concat([item?.titleImage || '']); let i=index"
-              id="carousel__slide{{(i+1)}}"
-                tabindex="0"
-                class="carousel__slide"
-            >
-              <img src="{{imageBigUrl}}" class="mainStage__mainImage"/>
-
-              <div class="carousel__snapper">
-              </div>
-            </li>
-          </ol>
-
-        </section>
-
+      <div class="carousel__viewport">
+          <div
+            *ngFor="let imageBigUrl of (item?.imagesBig || []).concat([item?.titleImage || ''])"
+          >
+            <img src="{{imageBigUrl}}" class="mainStage__mainImage"/>
+          </div>
       </div>
     </div>
     <div class="col-12 col-md-6">
